Build a Fraction: Play sound for completing individual challenges when placed in the target box rather than when built
Equality lab: Water glasses are the wrong color in the bucket
Equality lab: Fixed icon colors to match the drawn representations
Equality Lab: added vertical bars
Build a Fraction: Added multiple pages to carousel for level selection
# 1.00.05 (65811) Jul 13, 2012
Build a Fraction: Play "ding" sound when a match complete instead of when placed in target box
# 1.00.04 (65804) Jul 13, 2012
Build a Fraction: Added audio on/off controls on the level selection screen
# 1.00.03 (65796) Jul 13, 2012
Build a Fraction: Play a "ding" sound when filling a box, or "ta-da" sound when all boxes full
Build a Fraction: When refreshing a level, cross fade instead of panning the camera
# 1.00.02 (65769) Jul 11, 2012
# 1.00.01 (65767) Jul 11, 2012
Fraction Matcher: Use a consistent color for red in the level selection screen, see #3357
Fraction Matcher: Removed unused "standaloneSim" parameter, see #3357
Build a Fraction: Pictures: Fixed: Piece should move down in the target cell, it is too high now that the piece size buttons appear beneath.
Build a Fraction: Pictures: Use the same colors in each level as the icon
Build a Fraction: Pictures: Use the specified color in each level
Build a Fraction: Added a reset all button to the level selection page
Build a Fraction: Made it so a filled container cannot be returned to the toolbox
Build a Fraction: Added number icons
# 1.00.00 (65580) Jun 29, 2012
Fraction Matcher: Added screenshot
# 0.00.103 (65578) Jun 29, 2012
Fraction Matcher: Require vertical or horizontal bars to have less than 9 segments
Fraction Matcher: Added 3x3 grid back
Build a Fraction: Put the shape cards directly on the shape container icons
# 0.00.102 (65571) Jun 29, 2012
Fraction Matcher: Removed 3x3 grid pattern
Build a Fraction: Added "refresh" button to the number scene
Build a Fraction: Wired up the "refresh" button
# 0.00.101 (65565) Jun 29, 2012